fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+
 }
 
 html {
     width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
@@ -94,6 +96,8 @@ html {
 .about-container {
     height: 100vh;
     padding-top: 132px;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .aboutunslant {
@@ -108,7 +112,7 @@ html {
 }
 
 .about-section {
-    width: 140vw;
+    width: 120vw;
     margin-left: -50px;
     min-height: 50vh;
     background-color: #4e6e38;
